--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!doctype html>
+<html lang="pl">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Biblioteka cyfrowa</title>
+</head>
+<body>
+<div id="root"></div>
+</body>
+</html>
